--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "./public/js/index.js",
-      "use": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundler.js"
+      "src": "./public/js/index.js"
     }
   ],
   "routes": [{ "src": "/(.*)", "dest": "/" }],
